--- a/package.json
+++ b/package.json
@@ -61,10 +61,12 @@
     "eslint-plugin-jest": "^26.5.3",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^28.1.1",
-    "lodash.mergewith": "^4.6.2",
     "prettier": "^2.7.0",
-    "tailwind-merge": "^1.3.0",
     "ts-jest": "^28.0.5",
     "typescript": "^4.7.3"
+  },
+  "dependencies": {
+    "lodash.mergewith": "^4.6.2",
+    "tailwind-merge": "^1.3.0"
   }
 }
