--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,11 +4,11 @@
     "browser": true,
     "node": true
   },
-  "plugins": ["prettier", "@typescript-eslint", "jest", "import"],
   "extends": [
     "prettier",
     "plugin:prettier/recommended",
     "plugin:@typescript-eslint/recommended",
+    "plugin:import/recommended",
     "plugin:import/typescript"
   ],
   "parserOptions": {
