--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "access": "public"
   },
   "peerDependencies": {
-    "@aboutbits/react-ui": "~0.1.0 || ~0.2.0 || ~0.3.0",
+    "@aboutbits/react-ui": "~0.1.0 || ~0.2.0 || ~0.3.0 || ~1.0.0",
     "next": "^12",
     "tailwindcss": "^3.1",
     "webpack": "^5"
