improve cjs and esm build

--- a/package.json
+++ b/package.json
@@ -2,18 +2,20 @@
   "name": "@aboutbits/react-ui-integrations",
   "version": "1.0.0",
   "description": "Webpack and Tailwind integration for ReactUI",
-  "main": "dist/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/cjs/index.d.ts",
   "engines": {
     "node": "^16",
     "npm": "^8"
   },
   "scripts": {
-    "build": "npm run build:node && npm run build:esm",
-    "build:node": "tsc",
-    "build:esm": "tsc --project tsconfig.esnext.json",
+    "build": "npm run build:cjs && npm run build:esm",
+    "build:cjs": "tsc --project tsconfig.build.cjs.json",
+    "build:esm": "tsc --project tsconfig.build.esm.json",
     "lint": "eslint --ext js,ts,tsx src",
     "lint:fix": "npm run lint -- --fix",
-    "typecheck": "tsc --noEmit",
+    "typecheck": "tsc --project tsconfig.build.esm.json --noEmit",
     "test": "jest --verbose --passWithNoTests",
     "prepare": "npm run build",
     "prepublishOnly": "npm run test && npm run lint",
