--- a/package.json
+++ b/package.json
@@ -48,14 +48,15 @@
   "peerDependencies": {
     "@aboutbits/react-ui": "~0.1.0 || ~0.2.0 || ~0.3.0 || ~1.0.0",
     "next": "^12",
+    "react": "^17",
     "tailwindcss": "^3.1",
     "webpack": "^5"
   },
   "devDependencies": {
     "@types/jest": "^28.1.3",
     "@types/lodash.mergewith": "^4.6.7",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
     "eslint": "^8.18.0",
