improve tsconfig for build and add tsconfig for tests

--- a/tsconfig.build.cjs.json
+++ b/tsconfig.build.cjs.json
@@ -6,8 +6,7 @@
     "moduleResolution": "node",
     "outDir": "./dist/cjs",
     "declaration": true,
-    "importHelpers": true,
-    "skipLibCheck": true
+    "importHelpers": true
   },
   "exclude": ["**/__test__/*", "**/__tests__/*"],
   "include": ["src"]
