--- a/tsconfig.build.esm.json
+++ b/tsconfig.build.esm.json
@@ -7,8 +7,7 @@
     "allowSyntheticDefaultImports": true,
     "outDir": "./dist/esm",
     "declaration": true,
-    "importHelpers": true,
-    "skipLibCheck": true
+    "importHelpers": true
   },
   "exclude": ["**/__test__/*", "**/__tests__/*"],
   "include": ["src"]
