--- a/package.json
+++ b/package.json
@@ -2,18 +2,20 @@
   "name": "@aboutbits/react-ui-integrations",
   "version": "1.0.0",
   "description": "Webpack and Tailwind integration for ReactUI",
-  "main": "dist/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/cjs/index.d.ts",
   "engines": {
     "node": "^16",
     "npm": "^8"
   },
   "scripts": {
-    "build": "npm run build:node && npm run build:esm",
-    "build:node": "tsc",
-    "build:esm": "tsc --project tsconfig.esnext.json",
+    "build": "npm run build:cjs && npm run build:esm",
+    "build:cjs": "tsc --project tsconfig.build.cjs.json",
+    "build:esm": "tsc --project tsconfig.build.esm.json",
     "lint": "eslint --ext js,ts,tsx src",
     "lint:fix": "npm run lint -- --fix",
-    "typecheck": "tsc --noEmit",
+    "typecheck": "tsc --project tsconfig.build.esm.json --noEmit",
     "test": "jest --verbose --passWithNoTests",
     "prepare": "npm run build",
     "prepublishOnly": "npm run test && npm run lint",
@@ -46,14 +48,15 @@
   "peerDependencies": {
     "@aboutbits/react-ui": "~0.1.0 || ~0.2.0 || ~0.3.0 || ~1.0.0",
     "next": "^12",
+    "react": "^17",
     "tailwindcss": "^3.1",
     "webpack": "^5"
   },
   "devDependencies": {
     "@types/jest": "^28.1.3",
     "@types/lodash.mergewith": "^4.6.7",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
     "eslint": "^8.18.0",
