--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,5 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "esModuleInterop": true,
-    "outDir": "./dist",
-    "declaration": true,
-    "strict": true,
-    "sourceMap": true,
-    "skipLibCheck": true
-  },
-  "include": ["src"],
-  "exclude": ["node_modules", "**/__test__/*", "**/__tests__/*"]
+    "esModuleInterop": true
+  }
 }
