--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "access": "public"
   },
   "peerDependencies": {
-    "@aboutbits/react-ui": "~0.1.0 || ~0.2.0 || ~0.3.0 || ~1.0.0",
+    "@aboutbits/react-ui": "~0.1.0 || ~0.2.0 || ~0.3.0 || ^1.0.0",
     "next": "^12",
     "react": "^17",
     "tailwindcss": "^3.1",
