--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "access": "public"
   },
   "peerDependencies": {
-    "@aboutbits/react-ui": "~0.1.0 || ~0.2.0 || ~0.3.0 || ^1.0.0 || github:aboutbits/react-ui#react-18",
+    "@aboutbits/react-ui": "github:aboutbits/react-ui#react-18",
     "next": "^12 || ^13",
     "react": "^17.0.2",
     "tailwindcss": "^3.1",
