--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   "peerDependencies": {
     "@aboutbits/react-ui": "github:aboutbits/react-ui#react-18",
     "next": "^12 || ^13",
-    "react": "^17.0.2",
+    "react": "^17.0.2 || ^18",
     "tailwindcss": "^3.1",
     "webpack": "^5"
   },
