--- a/package.json
+++ b/package.json
@@ -46,14 +46,14 @@
     "access": "public"
   },
   "peerDependencies": {
-    "@aboutbits/react-ui": "github:aboutbits/react-ui#react-18",
+    "@aboutbits/react-ui": "~0.1.0 || ~0.2.0 || ~0.3.0 || ^1.0.0",
     "next": "^12 || ^13",
     "react": "^17.0.2 || ^18",
     "tailwindcss": "^3.1",
     "webpack": "^5"
   },
   "devDependencies": {
-    "@aboutbits/react-ui": "github:aboutbits/react-ui#react-18",
+    "@aboutbits/react-ui": "^1.2.0",
     "@types/jest": "^28.1.3",
     "@types/lodash.mergewith": "^4.6.7",
     "@types/react": "^18.0.0",
