--- a/package.json
+++ b/package.json
@@ -47,16 +47,17 @@
   },
   "peerDependencies": {
     "@aboutbits/react-ui": "~0.1.0 || ~0.2.0 || ~0.3.0 || ^1.0.0",
-    "next": "^12",
-    "react": "^17",
+    "next": "^12 || ^13",
+    "react": "^17.0.2 || ^18",
     "tailwindcss": "^3.1",
     "webpack": "^5"
   },
   "devDependencies": {
+    "@aboutbits/react-ui": "^1.2.0",
     "@types/jest": "^28.1.3",
     "@types/lodash.mergewith": "^4.6.7",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
     "eslint": "^8.18.0",
@@ -65,7 +66,9 @@
     "eslint-plugin-jest": "^26.5.3",
     "eslint-plugin-prettier": "^4.1.0",
     "jest": "^28.1.1",
+    "next": "^13.0.0",
     "prettier": "^2.7.1",
+    "react": "^18.0.0",
     "ts-jest": "^28.0.5",
     "typescript": "^4.7.4"
   },
