--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,9 +13,15 @@
   ],
   "parserOptions": {
     "sourceType": "module",
-    "ecmaVersion": 2018
+    "ecmaVersion": 2020
   },
   "rules": {
     "import/order": ["error"]
+  },
+  "settings": {
+    "import/resolver": {
+      "typescript": true,
+      "node": true
+    }
   }
 }
