--- a/package.json
+++ b/package.json
@@ -2,20 +2,19 @@
   "name": "@aboutbits/react-ui-integrations",
   "version": "1.0.3",
   "description": "Webpack and Tailwind integration for ReactUI",
-  "main": "dist/cjs/index.js",
+  "main": "dist/esm/index.js",
   "module": "dist/esm/index.js",
-  "types": "dist/cjs/index.d.ts",
+  "types": "dist/esm/index.d.ts",
   "engines": {
     "node": "^16",
     "npm": "^8"
   },
   "scripts": {
-    "build": "npm run build:cjs && npm run build:esm",
-    "build:cjs": "tsc --project tsconfig.build.cjs.json",
+    "build": "npm run build:esm",
     "build:esm": "tsc --project tsconfig.build.esm.json",
     "lint": "eslint --ext js,ts,tsx src",
     "lint:fix": "npm run lint -- --fix",
-    "typecheck": "tsc --project tsconfig.build.esm.json --noEmit",
+    "typecheck": "tsc --project tsconfig.json --noEmit",
     "test": "jest --verbose --passWithNoTests",
     "prepare": "npm run build",
     "prepublishOnly": "npm run test && npm run lint",
@@ -46,14 +45,14 @@
     "access": "public"
   },
   "peerDependencies": {
-    "@aboutbits/react-ui": "~0.1.0 || ~0.2.0 || ~0.3.0 || ^1.0.0",
+    "@aboutbits/react-ui": "~0.1.0 || ~0.2.0 || ~0.3.0 || ^1.0.0 || ^2.0.0",
     "next": "^12 || ^13",
     "react": "^17.0.2 || ^18",
     "tailwindcss": "^3.1",
     "webpack": "^5"
   },
   "devDependencies": {
-    "@aboutbits/react-ui": "^1.2.0",
+    "@aboutbits/react-ui": "github:aboutbits/react-ui#fix-entry-points",
     "@types/jest": "^28.1.3",
     "@types/lodash.mergewith": "^4.6.7",
     "@types/react": "^18.0.0",
@@ -62,6 +61,7 @@
     "@typescript-eslint/parser": "^5.30.0",
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^26.5.3",
     "eslint-plugin-prettier": "^4.1.0",
@@ -70,7 +70,7 @@
     "prettier": "^2.7.1",
     "react": "^18.0.0",
     "ts-jest": "^28.0.5",
-    "typescript": "^4.7.4"
+    "typescript": "^5.0.0"
   },
   "dependencies": {
     "lodash.mergewith": "^4.6.2",
