--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "compilerOptions": {
-    "esModuleInterop": true
-  }
+    "target": "ES2020",
+    "moduleResolution": "bundler",
+    "strict": true,
+    "esModuleInterop": true,
+    "importHelpers": true
+  },
+  "include": ["src"]
 }
