--- a/tsconfig.build.esm.json
+++ b/tsconfig.build.esm.json
@@ -2,6 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "target": "ES6",
+    "declaration": true,
     "outDir": "./dist/esm"
   },
   "exclude": ["**/__test__/*"],
