--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "@aboutbits/react-ui-integrations",
   "version": "1.0.3",
   "description": "Webpack and Tailwind integration for ReactUI",
+  "types": "./dist/types/index.d.ts",
+  "module": "./dist/esm/index.js",
+  "main": "./dist/cjs/index.js",
   "exports": {
     ".": {
-      "types": "./dist/esm/index.d.ts",
-      "import": "./dist/esm/index.js"
+      "types": "./dist/types/index.d.ts",
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js"
     }
   },
   "engines": {
@@ -13,8 +17,10 @@
     "npm": "^8"
   },
   "scripts": {
-    "build": "npm run build:esm",
-    "build:esm": "tsc --project tsconfig.build.esm.json",
+    "build": "rimraf dist && npm run build:types && npm run build:esm && npm run build:cjs",
+    "build:types": "tsc -p tsconfig.types.json",
+    "build:esm": "tsc -p tsconfig.esm.json",
+    "build:cjs": "tsc -p tsconfig.cjs.json",
     "lint": "eslint --ext js,ts,tsx src",
     "lint:fix": "npm run lint -- --fix",
     "typecheck": "tsc --project tsconfig.json --noEmit",
@@ -56,6 +62,7 @@
   },
   "devDependencies": {
     "@aboutbits/react-ui": "github:aboutbits/react-ui#fix-entry-points",
+    "@aboutbits/ts-config": "^1.1.2",
     "@types/jest": "^28.1.3",
     "@types/lodash.mergewith": "^4.6.7",
     "@types/react": "^18.0.0",
@@ -72,6 +79,7 @@
     "next": "^13.0.0",
     "prettier": "^2.7.1",
     "react": "^18.0.0",
+    "rimraf": "^5.0.1",
     "ts-jest": "^28.0.5",
     "typescript": "^5.0.0"
   },
