--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,7 @@
 {
+  "extends": "@aboutbits/ts-config/react",
   "compilerOptions": {
-    "target": "ES2020",
-    "moduleResolution": "bundler",
-    "strict": true,
-    "esModuleInterop": true,
-    "importHelpers": true
+    "skipLibCheck": true
   },
   "include": ["src"]
 }
