--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "webpack": "^5"
   },
   "devDependencies": {
-    "@aboutbits/react-ui": "github:aboutbits/react-ui#fix-entry-points",
+    "@aboutbits/react-ui": "^2.0.3",
     "@aboutbits/ts-config": "^1.1.2",
     "@types/jest": "^28.1.3",
     "@types/lodash.mergewith": "^4.6.7",
