--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     }
   },
   "engines": {
-    "node": "^16",
-    "npm": "^8"
+    "npm": ">=8",
+    "node": ">=16"
   },
   "scripts": {
     "build": "rimraf dist && npm run build:types && npm run build:esm && npm run build:cjs",
