--- a/package.json
+++ b/package.json
@@ -55,36 +55,36 @@
   },
   "peerDependencies": {
     "@aboutbits/react-ui": "~0.1.0 || ~0.2.0 || ~0.3.0 || ^1.0.0 || ^2.0.0",
-    "next": "^12 || ^13",
+    "next": "^12 || ^13 || ^14",
     "react": "^17.0.2 || ^18",
     "tailwindcss": "^3.1",
     "webpack": "^5"
   },
-  "devDependencies": {
-    "@aboutbits/react-ui": "^2.0.3",
-    "@aboutbits/ts-config": "^1.1.2",
-    "@types/jest": "^28.1.3",
-    "@types/lodash.mergewith": "^4.6.7",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.30.0",
-    "@typescript-eslint/parser": "^5.30.0",
-    "eslint": "^8.18.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.5.3",
-    "eslint-plugin-prettier": "^4.1.0",
-    "jest": "^28.1.1",
-    "next": "^13.0.0",
-    "prettier": "^2.7.1",
-    "react": "^18.0.0",
-    "rimraf": "^5.0.1",
-    "ts-jest": "^28.0.5",
-    "typescript": "^5.0.0"
-  },
   "dependencies": {
     "lodash.mergewith": "^4.6.2",
-    "tailwind-merge": "^1.3.0"
+    "tailwind-merge": "^2.2.2"
+  },
+  "devDependencies": {
+    "@aboutbits/react-ui": "^2.7.6",
+    "@aboutbits/ts-config": "^1.1.3",
+    "@types/jest": "^29.5.12",
+    "@types/lodash.mergewith": "^4.6.9",
+    "@types/react": "^18.2.67",
+    "@types/react-dom": "^18.2.22",
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest": "^27.9.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "jest": "^29.7.0",
+    "next": "^14.1.3",
+    "prettier": "^3.2.5",
+    "react": "^18.2.0",
+    "rimraf": "^5.0.5",
+    "ts-jest": "^29.1.2",
+    "typescript": "^5.4.2"
   }
 }
