--- a/package.json
+++ b/package.json
@@ -2,9 +2,28 @@
   "name": "@aboutbits/react-ui-integrations",
   "version": "1.1.1",
   "description": "Webpack and Tailwind integration for ReactUI",
+  "homepage": "https://github.com/aboutbits/react-ui-integrations#readme",
+  "bugs": {
+    "url": "https://github.com/aboutbits/react-ui-integrations/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aboutbits/react-ui-integrations"
+  },
+  "keywords": [
+    "react-ui",
+    "webpack",
+    "tailwind"
+  ],
+  "license": "MIT",
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "types": "./dist/types/index.d.ts",
   "module": "./dist/esm/index.js",
   "main": "./dist/cjs/index.js",
+  "prettier": "@aboutbits/prettier-config",
   "exports": {
     ".": {
       "types": "./dist/types/index.d.ts",
@@ -12,6 +31,10 @@
       "require": "./dist/cjs/index.js"
     }
   },
+  "files": [
+    "readme.md",
+    "dist/**/*"
+  ],
   "engines": {
     "npm": ">=8",
     "node": ">=16"
@@ -25,66 +48,42 @@
     "lint:fix": "npm run lint -- --fix",
     "typecheck": "tsc --project tsconfig.json --noEmit",
     "test": "jest --verbose --passWithNoTests",
+    "checks": "npm run typecheck && npm run lint && npm run test",
     "prepare": "npm run build",
     "prepublishOnly": "npm run test && npm run lint",
     "version": "npm run test && npm run lint && git add -A src",
     "postversion": "git push && git push --tags"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/aboutbits/react-ui-integrations"
-  },
-  "private": false,
-  "keywords": [
-    "react-ui",
-    "webpack",
-    "tailwind"
-  ],
-  "author": "About Bits",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/aboutbits/react-ui-integrations/issues"
-  },
-  "homepage": "https://github.com/aboutbits/react-ui-integrations#readme",
-  "files": [
-    "readme.md",
-    "dist/**/*"
-  ],
-  "publishConfig": {
-    "access": "public"
-  },
-  "peerDependencies": {
-    "@aboutbits/react-ui": "~0.1.0 || ~0.2.0 || ~0.3.0 || ^1.0.0 || ^2.0.0",
-    "next": "^12 || ^13",
-    "react": "^17.0.2 || ^18",
-    "tailwindcss": "^3.1",
-    "webpack": "^5"
+  "dependencies": {
+    "lodash.mergewith": "^4.6.2",
+    "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
+    "@aboutbits/eslint-config": "^2.2.4",
+    "@aboutbits/prettier-config": "^1.6.1",
     "@aboutbits/react-ui": "^2.0.3",
-    "@aboutbits/ts-config": "^1.1.2",
-    "@types/jest": "^28.1.3",
+    "@aboutbits/ts-config": "^1.1.3",
+    "@types/jest": "^29.5.12",
     "@types/lodash.mergewith": "^4.6.7",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.30.0",
-    "@typescript-eslint/parser": "^5.30.0",
-    "eslint": "^8.18.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.5.3",
-    "eslint-plugin-prettier": "^4.1.0",
-    "jest": "^28.1.1",
-    "next": "^13.0.0",
-    "prettier": "^2.7.1",
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "jest": "^29.7.0",
+    "next": "^14.1.4",
+    "prettier": "^3.2.5",
     "react": "^18.0.0",
     "rimraf": "^5.0.1",
-    "ts-jest": "^28.0.5",
-    "typescript": "^5.0.0"
+    "ts-jest": "^29.1.2",
+    "typescript": "^5.4.3"
   },
-  "dependencies": {
-    "lodash.mergewith": "^4.6.2",
-    "tailwind-merge": "^1.3.0"
+  "peerDependencies": {
+    "@aboutbits/react-ui": "~0.1.0 || ~0.2.0 || ~0.3.0 || ^1.0.0 || ^2.0.0",
+    "next": "^12 || ^13 || ^14",
+    "react": "^17.0.2 || ^18",
+    "tailwindcss": "^3.1",
+    "webpack": "^5"
   }
 }
